# grid_arena

./: CMakeLists.txt  README.md  package.xml
cfg/: pid.cfg
launch/: arena.launch  arena_1.launch  run.launch
models/arena_ground/: model.config  model.sdf
models/arena_ground/materials/scripts/: arena.material
models/grid_robot_description/: model.config  model.sdf
models/grid_robot_description/materials/scripts/: april_tag.material
models/grid_robot_description/meshes/: right_wheel_link.STL
models/grid_robot_description_1/: model.config  model.sdf
models/grid_robot_description_1/materials/scripts/: april_tag_1.material
models/grid_robot_description_2/: model.config  model.sdf
models/grid_robot_description_2/materials/scripts/: april_tag_2.material
models/grid_robot_description_2/meshes/: base_link.STL
models/grid_robot_description_3/: model.config  model.sdf
models/grid_robot_description_3/materials/scripts/: april_tag_3.material
models/grid_robot_description_3/meshes/: left_wheel_link.STL
models/overhead_camera/: model.config  model.sdf
msg/: rpm.msg
script/: camera.py  teleop_latest.py
worlds/: arena.world  arena_1.world
