<?xml version="1.0"?>
<package format="2">
  <name>grid_arena</name>
  <version>0.0.0</version>
  <description>The grid_arena package</description>
  <maintainer email="arnabgudu.gs@gmail.com">Arnab Paikaray</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roscpp</build_depend>

  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
  </export>
</package>
